k8s/service-model.yaml
apiVersion: v1
kind: Service
metadata:
  name: qsm-model
spec:
  selector:
    app: qsm-model
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
