k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qsm-api
spec:
  selector:
    app: qsm-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
